--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="ohmyfood.css" /> 
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+        
     <title>Accueil_Ohmyfood</title>
 </head>
 <body>
@@ -11,7 +13,9 @@
         <img src="./Maquettes Ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood">
     </header>
     <div id="localisation">
-
+        <div class="searchBar">
+            <i class="fas fa-map-marker-alt"></i><input type="search" value="Paris, Belleville">
+        </div>
     </div>
     <div id="reservation">
 
