div reservation + shadows

--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -18,10 +18,13 @@
         </div>
     </div>
     <div id="reservation">
-
+        <h2>Réservez le menu qui vous convient</h2>
+        <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+        <div class="btn">Explorer nos restaurants</div>
     </div>
     <div id="fonctionnement">
-
+        <h2>fonctionnement</h2>
+        
     </div>
     <div id="restaurants">
 
