--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="ohmyfood.css" /> 
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
         
     <title>Accueil_Ohmyfood</title>
@@ -24,6 +25,15 @@
     </div>
     <div id="fonctionnement">
         <h2>fonctionnement</h2>
+        <div class="step" >
+            <div class="ball">1</div><i class="fas fa-mobile-alt"></i>
+        Choisissez un restaurant</div>
+        <div class="step" >
+            <div class="ball">2</div><i class="fas fa-list-ul"></i>
+        Composez votre menu</div>
+        <div class="step" >
+            <div class="ball">3</div><i class="fas fa-store"></i>
+        Dégustez au restaurant</div>
         
     </div>
     <div id="restaurants">
