--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -27,8 +27,8 @@
     </div>
 
     <div id="fonctionnement">
-        
-        <div class="titre"><h2>fonctionnement</h2></div>
+
+        <div class="titre"><h2>Fonctionnement</h2></div>
 
         <div class="step" >
             <div class="ball">1</div><i class="fas fa-mobile-alt"></i>
@@ -69,7 +69,13 @@
 
     </div>
     <footer>
-        
+        <h3>ohmyfood</h3>
+        <ul>
+            <li><i class="fas fa-utensils"></i>Proposer un restaurant</li>
+            <li><i class="fas fa-hands-helping"></i>Devenir un partenaire</li>
+            <li>Mentions légales</li>
+            <li>Contact</li>
+        </ul>
     </footer>
 </body>
 </html>
