--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -59,7 +59,7 @@
 
         <div class="carte">
             <img src="./Maquettes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
-            <div class="content"><article><h3>À la française</h3><p>Cité rouge</p></article><i class="far fa-heart"></i></div>           
+            <div class="content"><article><h3>À la française</h3><p>Cité Rouge</p></article><i class="far fa-heart"></i></div>           
         </div>
 
         <div class="carte">
