animation btn-commander et liens page d'accueil

--- a/menu-a_la_francaise.html
+++ b/menu-a_la_francaise.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <header>
+        <a href="./ohmyfood.html"><i class="fas fa-arrow-left"></i></a>
         <img src="./Maquettes Ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood">
     </header>
 
@@ -62,7 +63,7 @@
             </div>
 
         </div>
-        
+
         <div class="service">
             <p class="service_nom">PLATS</p>
 
