--- a/menu-le_delice_des_sens.html
+++ b/menu-le_delice_des_sens.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <header>
+        <a href="./ohmyfood.html"><i class="fas fa-arrow-left"></i></a>
         <img src="./Maquettes Ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood">
     </header>
 
@@ -138,7 +139,7 @@
             </div>
 
         </div>
-        
+
         <div class="btn btn--commander">Commander</div>
     </div>
     <footer>
