--- a/menu-a_la_francaise.html
+++ b/menu-a_la_francaise.html
@@ -22,7 +22,9 @@
     <div id="menu">
         <div class="titreRestaurant">
             <h2>À la française</h2>
-            <i class="far fa-heart"></i>
+            <i class="fal fa-heart"></i>
+            <i class="fas fa-heart"></i>
+            
         </div>
         <div class="service">
             <p class="service_nom">ENTRÉES</p>
