--- a/menu-la_palette_du_gout.html
+++ b/menu-la_palette_du_gout.html
@@ -22,7 +22,8 @@
     <div id="menu">
         <div class="titreRestaurant">
             <h2>La palette du goût</h2>
-            <i class="far fa-heart"></i>
+            <i class="fal fa-heart"></i>
+            <i class="fas fa-heart"></i>
         </div>
         <div class="service">
             <p class="service_nom">ENTRÉES</p>
