animation btn et step

--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -23,10 +23,10 @@
     <div id="reservation">
         <h2>Réservez le menu qui vous convient</h2>
         <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-        <div class="btn">Explorer nos restaurants</div>
+        <div class="btn btn--explorer">Explorer nos restaurants</div>
     </div>
 
-    <div id="fonctionnement">
+    <div class="fonctionnement">
 
         <div class="titre"><h2>Fonctionnement</h2></div>
 
