--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -47,12 +47,12 @@
 
         <div class="titre"><h2>Restaurants</h2></div>
 
-        <div class="carte">
+        <div class="carte carte--new">
             <img src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
             <div class="content"><article><h3>La palette du goût</h3><p>Ménilmontant</p></article><i class="far fa-heart"></i></div>            
         </div>
         
-        <div class="carte">
+        <div class="carte carte--new">
             <img src="./Maquettes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
             <div class="content"><article><h3>La note enchantée</h3><p>Charonne</p></article><i class="far fa-heart"></i></div>            
         </div>
