--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -49,22 +49,22 @@
 
         <div class="carte carte--new">
             <img src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
-            <div class="content"><article><h3>La palette du goût</h3><p>Ménilmontant</p></article><i class="far fa-heart"></i></div>            
+            <div class="content"><article><h3>La palette du goût</h3><p>Ménilmontant</p></article><i class="fas fa-heart"></i><i class="fal fa-heart"></i></div>            
         </div>
         
         <div class="carte carte--new">
             <img src="./Maquettes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
-            <div class="content"><article><h3>La note enchantée</h3><p>Charonne</p></article><i class="far fa-heart"></i></div>            
+            <div class="content"><article><h3>La note enchantée</h3><p>Charonne</p></article><i class="fas fa-heart"></i><i class="fal fa-heart"></i></div>            
         </div>
 
         <div class="carte">
             <img src="./Maquettes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
-            <div class="content"><article><h3>À la française</h3><p>Cité Rouge</p></article><i class="far fa-heart"></i></div>           
+            <div class="content"><article><h3>À la française</h3><p>Cité Rouge</p></article><i class="fas fa-heart"></i><i class="fal fa-heart"></i></div>           
         </div>
 
         <div class="carte">
             <img src="./Maquettes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
-            <div class="content"><article><h3>Le délice des sens</h3><p>Folie-Méricourt</p></article><i class="far fa-heart"></i></div>          
+            <div class="content"><article><h3>Le délice des sens</h3><p>Folie-Méricourt</p></article><i class="fas fa-heart"></i><i class="fal fa-heart"></i></div>          
         </div>
 
     </div>
