--- a/menu-la_palette_du_gout.html
+++ b/menu-la_palette_du_gout.html
@@ -150,10 +150,10 @@
     <footer>
         <h3>ohmyfood</h3>
         <ul>
-            <li><i class="fas fa-utensils"></i>Proposer un restaurant</li>
-            <li><i class="fas fa-hands-helping"></i>Devenir un partenaire</li>
-            <li>Mentions légales</li>
-            <li>Contact</li>
+            <a href="#"><li><i class="fas fa-utensils"></i>Proposer un restaurant</li></a>
+            <a href="#"><li><i class="fas fa-hands-helping"></i>Devenir un partenaire</li></a>
+            <a href="#"><li>Mentions légales</li></a>
+            <a href="mailto:ohmyfood_contact@yahoo.fr"><li>Contact</li></a>
         </ul>
     </footer>
 </body>
