--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -47,34 +47,38 @@
 
         <div class="titre"><h2>Restaurants</h2></div>
 
-        <div class="carte carte--new">
+        <a href="./menu-la_palette_du_gout.html">
+            <div class="carte carte--new">
             <img src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
             <div class="content"><article><h3>La palette du goût</h3><p>Ménilmontant</p></article><i class="fas fa-heart"></i><i class="fal fa-heart"></i></div>            
-        </div>
+        </div></a>
         
-        <div class="carte carte--new">
+        <a href="./menu-la_note_enchantee.html">
+            <div class="carte carte--new">
             <img src="./Maquettes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
             <div class="content"><article><h3>La note enchantée</h3><p>Charonne</p></article><i class="fas fa-heart"></i><i class="fal fa-heart"></i></div>            
-        </div>
+        </div></a>
 
-        <div class="carte">
+        <a href="./menu-a_la_francaise.html">
+            <div class="carte">
             <img src="./Maquettes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
             <div class="content"><article><h3>À la française</h3><p>Cité Rouge</p></article><i class="fas fa-heart"></i><i class="fal fa-heart"></i></div>           
-        </div>
+        </div></a>
 
-        <div class="carte">
+        <a href="./menu-le_delice_des_sens.html">
+            <div class="carte">
             <img src="./Maquettes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
             <div class="content"><article><h3>Le délice des sens</h3><p>Folie-Méricourt</p></article><i class="fas fa-heart"></i><i class="fal fa-heart"></i></div>          
-        </div>
+        </div></a>
 
     </div>
     <footer>
         <h3>ohmyfood</h3>
         <ul>
-            <li><i class="fas fa-utensils"></i>Proposer un restaurant</li>
-            <li><i class="fas fa-hands-helping"></i>Devenir un partenaire</li>
-            <li>Mentions légales</li>
-            <li>Contact</li>
+            <a href="#"><li><i class="fas fa-utensils"></i>Proposer un restaurant</li></a>
+            <a href="#"><li><i class="fas fa-hands-helping"></i>Devenir un partenaire</li></a>
+            <a href="#"><li>Mentions légales</li></a>
+            <a href="mailto:ohmyfood_contact@yahoo.fr"><li>Contact</li></a>
         </ul>
     </footer>
 </body>
