ajout du loader

--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -9,10 +9,12 @@
         
     <title>Accueil_Ohmyfood</title>
 </head>
-<body>
+<body >
+    <div class="load-spinner"></div>
     <header>
         <img src="./Maquettes Ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood">
     </header>
+    
 
     <div id="localisation">
         <div class="searchBar">
