modification loadspinner et ohmyfood.html valide w3c

--- a/menu-a_la_francaise.html
+++ b/menu-a_la_francaise.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <a href="./ohmyfood.html"><i class="fas fa-arrow-left"></i></a>
-        <img src="./Maquettes Ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood">
+        <img src="./Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood">
     </header>
 
     <div class="banniere banniere--alafrancaise">
