--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -12,7 +12,7 @@
 <body >
     <div class="load-spinner"></div>
     <header>
-        <img src="./Maquettes Ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood">
+        <img src="./Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood">
     </header>
     
 
@@ -51,25 +51,25 @@
 
         <a href="./menu-la_palette_du_gout.html">
             <div class="carte carte--new">
-            <img src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+            <img src="./Maquettes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
             <div class="content"><article><h3>La palette du goût</h3><p>Ménilmontant</p></article><i class="fas fa-heart"></i><i class="fal fa-heart"></i></div>            
         </div></a>
         
         <a href="./menu-la_note_enchantee.html">
             <div class="carte carte--new">
-            <img src="./Maquettes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+            <img src="./Maquettes_Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
             <div class="content"><article><h3>La note enchantée</h3><p>Charonne</p></article><i class="fas fa-heart"></i><i class="fal fa-heart"></i></div>            
         </div></a>
 
         <a href="./menu-a_la_francaise.html">
             <div class="carte">
-            <img src="./Maquettes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
+            <img src="./Maquettes_Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
             <div class="content"><article><h3>À la française</h3><p>Cité Rouge</p></article><i class="fas fa-heart"></i><i class="fal fa-heart"></i></div>           
         </div></a>
 
         <a href="./menu-le_delice_des_sens.html">
             <div class="carte">
-            <img src="./Maquettes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
+            <img src="./Maquettes_Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
             <div class="content"><article><h3>Le délice des sens</h3><p>Folie-Méricourt</p></article><i class="fas fa-heart"></i><i class="fal fa-heart"></i></div>          
         </div></a>
 
@@ -77,10 +77,10 @@
     <footer>
         <h3>ohmyfood</h3>
         <ul>
-            <a href="#"><li><i class="fas fa-utensils"></i>Proposer un restaurant</li></a>
-            <a href="#"><li><i class="fas fa-hands-helping"></i>Devenir un partenaire</li></a>
-            <a href="#"><li>Mentions légales</li></a>
-            <a href="mailto:ohmyfood_contact@yahoo.fr"><li>Contact</li></a>
+            <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+            <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir un partenaire</a></li>
+            <li><a href="#">Mentions légales</a></li>
+            <li><a href="mailto:ohmyfood_contact@yahoo.fr">Contact</a></li>
         </ul>
     </footer>
 </body>
