modification chemins bannieres et prix en h5 menu-a_la_francaise validation w3c

--- a/menu-a_la_francaise.html
+++ b/menu-a_la_francaise.html
@@ -36,7 +36,7 @@
                             <p>Aux zests d'orange</p>
                         </article>
                         <article class="prix">
-                            <p>25€</p>
+                            <h5>25€</h5>
                         </article>
                     </div>
                     <div class="checked"><i class="fas fa-check-circle"></i></div>                                               
@@ -48,7 +48,7 @@
                             <h3>Velouté de légumes d'antan</h3>
                             <p>Carotte, panais, topinambour</p>
                         </article>
-                        <article class="prix"><p>35€</p></article>
+                        <article class="prix"><h5>35€</h5></article>
                     </div>                
                     <div class="checked"><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -59,7 +59,7 @@
                             <h3>Soupe à l'oignon</h3>
                             <p>Revisitée</p>
                         </article>
-                        <article class="prix"><p>20€</p></article>
+                        <article class="prix"><h5>20€</h5></article>
                     </div>               
                     <div class="checked "><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -75,7 +75,7 @@
                             <h3>Coquilles Saint-Jacques</h3>
                             <p>Accompagnées d'une purée de panais</p>
                         </article>
-                        <article class="prix"><p>40€</p></article>
+                        <article class="prix"><h5>40€</h5></article>
                     </div>                
                     <div class="checked "><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -86,7 +86,7 @@
                             <h3>Magret de canard</h3>
                             <p>Et parmentier de pommes de terres</p>
                         </article>
-                        <article class="prix"><p>35€</p></article>
+                        <article class="prix"><h5>35€</h5></article>
                     </div>               
                     <div class="checked "><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -97,7 +97,7 @@
                             <h3>Pigeonneau d'Ille-et-Vilaine</h3>
                             <p>Sur son lit de gnocchis aux légumes</p>
                         </article>
-                        <article class="prix"><p>44€</p></article>
+                        <article class="prix"><h5>44€</h5></article>
                     </div>                
                     <div class="checked "><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -113,7 +113,7 @@
                             <h3>Pétales de violettes glacés</h3>
                             <p>Et purée de noisettes</p>
                         </article>
-                        <article class="prix"><p>18€</p></article>
+                        <article class="prix"><h5>18€</h5></article>
                     </div>  
                     <div class="checked "><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -124,7 +124,7 @@
                             <h3>Fondant au chocolat</h3>
                             <p>Revisité</p>
                         </article>
-                        <article class="prix"><p>22€</p></article>
+                        <article class="prix"><h5>22€</h5></article>
                     </div>               
                     <div class="checked "><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -135,7 +135,7 @@
                             <h3>Millefeuille croustillant</h3>
                             <p>Myrtilles et pâte d'amande</p>
                         </article>
-                        <article class="prix"><p>23€</p></article>
+                        <article class="prix"><h5>23€</h5></article>
                     </div>               
                     <div class="checked "><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -148,10 +148,10 @@
     <footer>
         <h3>ohmyfood</h3>
         <ul>
-            <a href="#"><li><i class="fas fa-utensils"></i>Proposer un restaurant</li></a>
-            <a href="#"><li><i class="fas fa-hands-helping"></i>Devenir un partenaire</li></a>
-            <a href="#"><li>Mentions légales</li></a>
-            <a href="mailto:ohmyfood_contact@yahoo.fr"><li>Contact</li></a>
+            <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+            <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir un partenaire</a></li>
+            <li><a href="#">Mentions légales</a></li>
+            <li><a href="mailto:ohmyfood_contact@yahoo.fr">Contact</a></li>
         </ul>
     </footer>
 </body>
