modifications menu-la_palette_du_gout validation w3c

--- a/menu-la_palette_du_gout.html
+++ b/menu-la_palette_du_gout.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <a href="./ohmyfood.html"><i class="fas fa-arrow-left"></i></a>
-        <img src="./Maquettes Ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood">
+        <img src="./Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood">
     </header>
 
     <div class="banniere banniere--lapalettedugout">
@@ -37,7 +37,7 @@
                             <p>Au piment d'espelette</p>
                         </article>
                         <article class="prix">
-                            <p>25€</p>
+                            <h5>25€</h5>
                         </article>
                     </div>
                     <div class="checked"><i class="fas fa-check-circle"></i></div>                                              
@@ -52,7 +52,7 @@
                             <h3>Foie gras de canard mi-cuit</h3>
                             <p>Et ses copeaux de truffe noire</p>
                         </article>
-                        <article class="prix"><p>35€</p></article>
+                        <article class="prix"><h5>35€</h5></article>
                     </div>               
                     <div class="checked"><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -63,7 +63,7 @@
                             <h3>Oeuf au plat</h3>
                             <p>Assaisonné à la truffe sur lit de caviar</p>
                         </article>
-                        <article class="prix"><p>20€</p></article>
+                        <article class="prix"><h5>20€</h5></article>
                     </div>               
                     <div class="checked "><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -79,7 +79,7 @@
                             <h3>Filet de boeuf aux herbes</h3>
                             <p>Accompagné de sa ribambelle de légumes</p>
                         </article>
-                        <article class="prix"><p>40€</p></article>
+                        <article class="prix"><h5>40€</h5></article>
                     </div>
                     <div class="checked "><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -90,7 +90,7 @@
                             <h3>Parmentier de queue de boeuf</h3>
                             <p>À la truffe noire sur sa purée de panais</p>
                         </article>
-                        <article class="prix"><p>35€</p></article>
+                        <article class="prix"><h5>35€</h5></article>
                     </div>                
                     <div class="checked "><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -101,7 +101,7 @@
                             <h3>Filet de Turbot</h3>
                             <p>Aux agrumes</p>
                         </article>
-                        <article class="prix"><p>44€</p></article>
+                        <article class="prix"><h5>44€</h5></article>
                     </div>                
                     <div class="checked "><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -117,7 +117,7 @@
                             <h3>Paris-Brest</h3>
                             <p>Revisité</p>
                         </article>
-                        <article class="prix"><p>18€</p></article>
+                        <article class="prix"><h5>18€</h5></article>
                     </div>           
                     <div class="checked "><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -128,7 +128,7 @@
                             <h3>Macaron au chocolat d'exception</h3>
                             <p>Et glace à la vanille de Madagascar</p>
                         </article>
-                        <article class="prix"><p>22€</p></article>
+                        <article class="prix"><h5>22€</h5></article>
                     </div>                
                     <div class="checked "><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -139,7 +139,7 @@
                             <h3>Mousse au chocolat</h3>
                             <p>Au piment d'espelette et à la truffe noire</p>
                         </article>
-                        <article class="prix"><p>23€</p></article>
+                        <article class="prix"><h5>23€</h5></article>
                     </div>                
                     <div class="checked "><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -153,10 +153,10 @@
     <footer>
         <h3>ohmyfood</h3>
         <ul>
-            <a href="#"><li><i class="fas fa-utensils"></i>Proposer un restaurant</li></a>
-            <a href="#"><li><i class="fas fa-hands-helping"></i>Devenir un partenaire</li></a>
-            <a href="#"><li>Mentions légales</li></a>
-            <a href="mailto:ohmyfood_contact@yahoo.fr"><li>Contact</li></a>
+            <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+            <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir un partenaire</a></li>
+            <li><a href="#">Mentions légales</a></li>
+            <li><a href="mailto:ohmyfood_contact@yahoo.fr">Contact</a></li>
         </ul>
     </footer>
 </body>
