modification menu-la_note_enchante.html validation w3c

--- a/menu-la_note_enchantee.html
+++ b/menu-la_note_enchantee.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <a href="./ohmyfood.html"><i class="fas fa-arrow-left"></i></a>
-        <img src="./Maquettes Ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood">
+        <img src="./Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood">
     </header>
 
     <div class="banniere banniere--lanoteenchantee">
@@ -36,7 +36,7 @@
                             <p>Accompagnés de leur crème à la truffe</p>
                         </article>
                         <article class="prix">
-                            <p>25€</p>
+                            <h5>25€</h5>
                         </article>
                     </div>
                     <div class="checked"><i class="fas fa-check-circle"></i></div>                                              
@@ -51,7 +51,7 @@
                             <h3>Caviar osciètre</h3>
                             <p>sur blini à la farine de blé noir</p>
                         </article>
-                        <article class="prix"><p>35€</p></article>
+                        <article class="prix"><h5>35€</h5></article>
                     </div>               
                     <div class="checked"><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -62,7 +62,7 @@
                             <h3>Homard et espuma de potiron</h3>
                             <p>Mariné aux zests d'orange</p>
                         </article>
-                        <article class="prix"><p>20€</p></article>
+                        <article class="prix"><h5>20€</h5></article>
                     </div>                
                     <div class="checked "><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -73,7 +73,7 @@
                             <h3>Foie gras de canard cuit entier</h3>
                             <p>confiture de figue et pain toasté</p>
                         </article>
-                        <article class="prix"><p>35€</p></article>
+                        <article class="prix"><h5>35€</h5></article>
                     </div>                
                     <div class="checked"><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -89,7 +89,7 @@
                             <h3>Noix de coquilles Saint-Jacques</h3>
                             <p>Sur lit de purée de célerie-rave</p>
                         </article>
-                        <article class="prix"><p>40€</p></article>
+                        <article class="prix"><h5>40€</h5></article>
                     </div>               
                     <div class="checked "><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -100,7 +100,7 @@
                             <h3>Langoustine poêlée</h3>
                             <p>Purée de patate douce</p>
                         </article>
-                        <article class="prix"><p>35€</p></article>
+                        <article class="prix"><h5>35€</h5></article>
                     </div>               
                     <div class="checked "><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -111,7 +111,7 @@
                             <h3>Mijoté de queue de boeuf</h3>
                             <p>Et riz sauvage aux zests de citron</p>
                         </article>
-                        <article class="prix"><p>44€</p></article>
+                        <article class="prix"><h5>44€</h5></article>
                     </div>                
                     <div class="checked "><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -127,7 +127,7 @@
                             <h3>Macaron noisette et chocolat</h3>
                             <p>Glace au caramel brun et sel de Guérande</p>
                         </article>
-                        <article class="prix"><p>18€</p></article>
+                        <article class="prix"><h5>18€</h5></article>
                     </div>               
                     <div class="checked "><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -138,7 +138,7 @@
                             <h3>Baba au rhum revisité</h3>
                             <p>Avec son coulis de citron</p>
                         </article>
-                        <article class="prix"><p>22€</p></article>
+                        <article class="prix"><h5>22€</h5></article>
                     </div>               
                     <div class="checked "><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -149,7 +149,7 @@
                             <h3>Tarte au citron meringuée</h3>
                             <p>Destructurée</p>
                         </article>
-                        <article class="prix"><p>23€</p></article>
+                        <article class="prix"><h5>23€</h5></article>
                     </div>                
                     <div class="checked "><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -163,10 +163,10 @@
     <footer>
         <h3>ohmyfood</h3>
         <ul>
-            <a href="#"><li><i class="fas fa-utensils"></i>Proposer un restaurant</li></a>
-            <a href="#"><li><i class="fas fa-hands-helping"></i>Devenir un partenaire</li></a>
-            <a href="#"><li>Mentions légales</li></a>
-            <a href="mailto:ohmyfood_contact@yahoo.fr"><li>Contact</li></a>
+            <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+            <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir un partenaire</a></li>
+            <li><a href="#">Mentions légales</a></li>
+            <li><a href="mailto:ohmyfood_contact@yahoo.fr">Contact</a></li>
         </ul>
     </footer>
 </body>
