--- a/menu-le_delice_des_sens.html
+++ b/menu-le_delice_des_sens.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <a href="./ohmyfood.html"><i class="fas fa-arrow-left"></i></a>
-        <img src="./Maquettes Ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood">
+        <img src="./Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood">
     </header>
 
     <div class="banniere banniere--ledelicedessens">
@@ -36,7 +36,7 @@
                             <p>Assaisonné au yuzu</p>
                         </article>
                         <article class="prix">
-                            <p>25€</p>
+                            <h5>25€</h5>
                         </article>
                     </div>
                     <div class="checked"><i class="fas fa-check-circle"></i></div>                                              
@@ -48,7 +48,7 @@
                             <h3>Bouchée de homard croustillant</h3>
                             <p>Et sa farandole de petits légumes</p>
                         </article>
-                        <article class="prix"><p>35€</p></article>
+                        <article class="prix"><h5>35€</h5></article>
                     </div>                
                     <div class="checked"><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -59,7 +59,7 @@
                             <h3>Velouté de cèpes</h3>
                             <p>Aux truffes</p>
                         </article>
-                        <article class="prix"><p>20€</p></article>
+                        <article class="prix"><h5>20€</h5></article>
                     </div>                
                     <div class="checked "><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -75,7 +75,7 @@
                             <h3>Poulet rôti aux herbes de provence</h3>
                             <p>Et sa crème de truffe</p>
                         </article>
-                        <article class="prix"><p>40€</p></article>
+                        <article class="prix"><h5>40€</h5></article>
                     </div>               
                     <div class="checked "><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -86,7 +86,7 @@
                             <h3>Langouste rôtie</h3>
                             <p>Et ses legumes de saison</p>
                         </article>
-                        <article class="prix"><p>35€</p></article>
+                        <article class="prix"><h5>35€</h5></article>
                     </div>               
                     <div class="checked "><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -97,7 +97,7 @@
                             <h3>Côte de boeuf angus</h3>
                             <p>Et sa purée de panais</p>
                         </article>
-                        <article class="prix"><p>44€</p></article>
+                        <article class="prix"><h5>44€</h5></article>
                     </div>                
                     <div class="checked "><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -113,7 +113,7 @@
                             <h3>Farandole de desserts</h3>
                             <p>Du chef</p>
                         </article>
-                        <article class="prix"><p>18€</p></article>
+                        <article class="prix"><h5>18€</h5></article>
                     </div>               
                     <div class="checked "><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -124,7 +124,7 @@
                             <h3>Crème brulée</h3>
                             <p>Revisitée</p>
                         </article>
-                        <article class="prix"><p>22€</p></article>
+                        <article class="prix"><h5>22€</h5></article>
                     </div>               
                     <div class="checked "><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -135,7 +135,7 @@
                             <h3>Tiramisu</h3>
                             <p>À la noisette</p>
                         </article>
-                        <article class="prix"><p>23€</p></article>
+                        <article class="prix"><h5>23€</h5></article>
                     </div>               
                     <div class="checked "><i class="fas fa-check-circle"></i></div>
                 </div>
@@ -149,10 +149,10 @@
     <footer>
         <h3>ohmyfood</h3>
         <ul>
-            <a href="#"><li><i class="fas fa-utensils"></i>Proposer un restaurant</li></a>
-            <a href="#"><li><i class="fas fa-hands-helping"></i>Devenir un partenaire</li></a>
-            <a href="#"><li>Mentions légales</li></a>
-            <a href="mailto:ohmyfood_contact@yahoo.fr"><li>Contact</li></a>
+            <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+            <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir un partenaire</a></li>
+            <li><a href="#">Mentions légales</a></li>
+            <li><a href="mailto:ohmyfood_contact@yahoo.fr">Contact</a></li>
         </ul>
     </footer>
 </body>
