--- a/menu-la_palette_du_gout.html
+++ b/menu-la_palette_du_gout.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <a href="./ohmyfood.html"><i class="fas fa-arrow-left"></i></a>
+        <a href="./index.html"><i class="fas fa-arrow-left"></i></a>
         <img src="./Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood">
     </header>
 
