modifications mineures index.html et restaurants

--- a/menu-la_note_enchantee.html
+++ b/menu-la_note_enchantee.html
@@ -15,9 +15,7 @@
         <img src="./Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood">
     </header>
 
-    <div class="banniere banniere--lanoteenchantee">
-        
-    </div>
+    <div class="banniere banniere--lanoteenchantee"></div>
     
     <div id="menu">
         <div class="titreRestaurant">
