--- a/menu-a_la_francaise.html
+++ b/menu-a_la_francaise.html
@@ -15,9 +15,7 @@
         <img src="./Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood">
     </header>
 
-    <div class="banniere banniere--alafrancaise">
-        
-    </div>
+    <div class="banniere banniere--alafrancaise"></div>
     
     <div id="menu">
         <div class="titreRestaurant">
