--- a/menu-la_palette_du_gout.html
+++ b/menu-la_palette_du_gout.html
@@ -15,9 +15,7 @@
         <img src="./Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood">
     </header>
 
-    <div class="banniere banniere--lapalettedugout">
-        
-    </div>
+    <div class="banniere banniere--lapalettedugout"></div>
     
     <div id="menu">
         <div class="titreRestaurant">
