--- a/menu-le_delice_des_sens.html
+++ b/menu-le_delice_des_sens.html
@@ -15,9 +15,7 @@
         <img src="./Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood">
     </header>
 
-    <div class="banniere banniere--ledelicedessens">
-        
-    </div>
+    <div class="banniere banniere--ledelicedessens"></div>
     
     <div id="menu">
         <div class="titreRestaurant">
